cleaning up ef
